* Fixed layout problem in IE.

--- a/tinyerp/static/css/style.css
+++ b/tinyerp/static/css/style.css
@@ -149,7 +149,7 @@ a.menu_connection {
 
 #shortcuts_extra a {
     display: block;
-    padding: 2px 6px;"
+    padding: 2px 6px;
 }
 
 /*------------------------------------------------------*/
